@@ -1,3 +1,7 @@
+* item probability functions now only permit permissible values, and models may converge even when
+  the log-likelihood decreases during estimation. In the EM if the model does not have a strictly 
+  increasing log-likelihood then a warning message will be printed
+
 * removed infit and outfit stats since they only are applicable to Rasch models (and are available in
   the eRm package)
 
